[gd_scene load_steps=7 format=3 uid="uid://huxnga0mwwl3"]

[ext_resource type="Script" path="res://scripts/player_basic_movement.gd" id="1_y3o6b"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_5tadk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="3_fwyks"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_13exe"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_vtb4f"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_sjwtd"]

[node name="PlayerBasicMovement" type="Node"]
script = ExtResource("1_y3o6b")
run_forward_velocity = 500.0
run_backward_velocity = 500.0
run_deceleration = 40.0
jump_momentum = -300.0

[node name="State" type="Node" parent="."]
script = ExtResource("2_5tadk")

[node name="Root" type="Node" parent="State"]
script = ExtResource("3_fwyks")

[node name="Movement" type="Node" parent="State/Root"]
script = ExtResource("4_13exe")
initial_state = NodePath("in the air")

[node name="idle" type="Node" parent="State/Root/Movement"]
script = ExtResource("5_vtb4f")

[node name="to run buffer" type="Node" parent="State/Root/Movement/idle"]
script = ExtResource("6_sjwtd")
to = NodePath("../../run buffer")
event = &"idle to run buffer"
delay_in_seconds = "0.0"

[node name="to jump" type="Node" parent="State/Root/Movement/idle"]
script = ExtResource("6_sjwtd")
to = NodePath("../../jump")
event = &"idle to jump"
delay_in_seconds = "0.0"

[node name="to in the air" type="Node" parent="State/Root/Movement/idle"]
script = ExtResource("6_sjwtd")
to = NodePath("../../in the air")
event = &"idle to in the air"
delay_in_seconds = "0.0"

[node name="run" type="Node" parent="State/Root/Movement"]
script = ExtResource("5_vtb4f")

[node name="to jump" type="Node" parent="State/Root/Movement/run"]
script = ExtResource("6_sjwtd")
to = NodePath("../../jump")
event = &"run to jump"
delay_in_seconds = "0.0"

[node name="to in the air" type="Node" parent="State/Root/Movement/run"]
script = ExtResource("6_sjwtd")
to = NodePath("../../in the air")
event = &"run to in the air"
delay_in_seconds = "0.0"

[node name="to skid" type="Node" parent="State/Root/Movement/run"]
script = ExtResource("6_sjwtd")
to = NodePath("../../skid")
event = &"run to skid"
delay_in_seconds = "0.0"

[node name="to idle" type="Node" parent="State/Root/Movement/run"]
script = ExtResource("6_sjwtd")
to = NodePath("../../idle")
event = &"run to idle"
delay_in_seconds = "0.1"

[node name="skid" type="Node" parent="State/Root/Movement"]
script = ExtResource("5_vtb4f")

[node name="to run" type="Node" parent="State/Root/Movement/skid"]
script = ExtResource("6_sjwtd")
to = NodePath("../../run")
event = &"skid to run"
delay_in_seconds = "0.0"

[node name="to in the air" type="Node" parent="State/Root/Movement/skid"]
script = ExtResource("6_sjwtd")
to = NodePath("../../in the air")
event = &"skid to in the air"
delay_in_seconds = "0.0"

[node name="to jump" type="Node" parent="State/Root/Movement/skid"]
script = ExtResource("6_sjwtd")
to = NodePath("../../jump")
event = &"skid to jump"
delay_in_seconds = "0.0"

[node name="run buffer" type="Node" parent="State/Root/Movement"]
script = ExtResource("5_vtb4f")

[node name="to run" type="Node" parent="State/Root/Movement/run buffer"]
script = ExtResource("6_sjwtd")
to = NodePath("../../run")
event = &"run buffer to run"
delay_in_seconds = "0.1"

[node name="to jump" type="Node" parent="State/Root/Movement/run buffer"]
script = ExtResource("6_sjwtd")
to = NodePath("../../jump")
event = &"run buffer to jump"
delay_in_seconds = "0.0"

[node name="to in the air" type="Node" parent="State/Root/Movement/run buffer"]
script = ExtResource("6_sjwtd")
to = NodePath("../../in the air")
event = &"run buffer to in the air"
delay_in_seconds = "0.0"

[node name="jump" type="Node" parent="State/Root/Movement"]
script = ExtResource("5_vtb4f")

[node name="to in the air" type="Node" parent="State/Root/Movement/jump"]
script = ExtResource("6_sjwtd")
to = NodePath("../../in the air")
event = &"jump to in the air"
delay_in_seconds = "0.05"

[node name="in the air" type="Node" parent="State/Root/Movement"]
script = ExtResource("5_vtb4f")

[node name="to run" type="Node" parent="State/Root/Movement/in the air"]
script = ExtResource("6_sjwtd")
to = NodePath("../../run")
event = &"in the air to run"
delay_in_seconds = "0.0"

[node name="to jump buffer" type="Node" parent="State/Root/Movement/in the air"]
script = ExtResource("6_sjwtd")
to = NodePath("../../jump buffer")
event = &"in the air to jump buffer"
delay_in_seconds = "0.0"

[node name="jump buffer" type="Node" parent="State/Root/Movement"]
script = ExtResource("5_vtb4f")

[node name="to jump" type="Node" parent="State/Root/Movement/jump buffer"]
script = ExtResource("6_sjwtd")
to = NodePath("../../jump")
event = &"jump buffer to jump"
delay_in_seconds = "0.0"

[node name="to in the air" type="Node" parent="State/Root/Movement/jump buffer"]
script = ExtResource("6_sjwtd")
to = NodePath("../../in the air")
event = &"jump buffer to in the air"
delay_in_seconds = "0.0"

[node name="Direction" type="Node" parent="State/Root"]
script = ExtResource("4_13exe")
initial_state = NodePath("face right")

[node name="face right" type="Node" parent="State/Root/Direction"]
script = ExtResource("5_vtb4f")

[node name="to face left" type="Node" parent="State/Root/Direction/face right"]
script = ExtResource("6_sjwtd")
to = NodePath("../../face left")
event = &"face right to face left"
delay_in_seconds = "0.0"

[node name="to turn left" type="Node" parent="State/Root/Direction/face right"]
script = ExtResource("6_sjwtd")
to = NodePath("../../turn left")
event = &"face right to turn left"
delay_in_seconds = "0.0"

[node name="face left" type="Node" parent="State/Root/Direction"]
script = ExtResource("5_vtb4f")

[node name="to face right" type="Node" parent="State/Root/Direction/face left"]
script = ExtResource("6_sjwtd")
to = NodePath("../../face right")
event = &"face left to face right"
delay_in_seconds = "0.0"

[node name="to turn right" type="Node" parent="State/Root/Direction/face left"]
script = ExtResource("6_sjwtd")
to = NodePath("../../turn right")
event = &"face left to turn right"
delay_in_seconds = "0.0"

[node name="turn right" type="Node" parent="State/Root/Direction"]
script = ExtResource("5_vtb4f")

[node name="to face right" type="Node" parent="State/Root/Direction/turn right"]
script = ExtResource("6_sjwtd")
to = NodePath("../../face right")
event = &"turn right to face right"
delay_in_seconds = "0.0"

[node name="turn left" type="Node" parent="State/Root/Direction"]
script = ExtResource("5_vtb4f")

[node name="to face left" type="Node" parent="State/Root/Direction/turn left"]
script = ExtResource("6_sjwtd")
to = NodePath("../../face left")
event = &"turn left to face left"
delay_in_seconds = "0.0"

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="TurnLeftTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.3

[node name="TurnRightTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.3

[connection signal="state_entered" from="State/Root/Movement/idle" to="." method="_on_idle_state_entered"]
[connection signal="state_exited" from="State/Root/Movement/idle" to="." method="_on_idle_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Movement/idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Movement/run" to="." method="_on_run_state_entered"]
[connection signal="state_exited" from="State/Root/Movement/run" to="." method="_on_run_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Movement/run" to="." method="_on_run_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Movement/skid" to="." method="_on_skid_state_entered"]
[connection signal="state_physics_processing" from="State/Root/Movement/skid" to="." method="_on_skid_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Movement/run buffer" to="." method="_on_run_buffer_state_entered"]
[connection signal="state_exited" from="State/Root/Movement/run buffer" to="." method="_on_run_buffer_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Movement/run buffer" to="." method="_on_run_buffer_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Movement/jump" to="." method="_on_jump_state_entered"]
[connection signal="state_physics_processing" from="State/Root/Movement/jump" to="." method="_on_jump_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Movement/in the air" to="." method="_on_in_the_air_state_entered"]
[connection signal="state_exited" from="State/Root/Movement/in the air" to="." method="_on_in_the_air_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Movement/in the air" to="." method="_on_in_the_air_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Movement/jump buffer" to="." method="_on_jump_buffer_state_entered"]
[connection signal="state_exited" from="State/Root/Movement/jump buffer" to="." method="_on_jump_buffer_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Movement/jump buffer" to="." method="_on_jump_buffer_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Direction/face right" to="." method="_on_face_right_state_entered"]
[connection signal="state_physics_processing" from="State/Root/Direction/face right" to="." method="_on_face_right_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Direction/face left" to="." method="_on_face_left_state_entered"]
[connection signal="state_physics_processing" from="State/Root/Direction/face left" to="." method="_on_face_left_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Direction/turn right" to="." method="_on_turn_right_state_entered"]
[connection signal="state_exited" from="State/Root/Direction/turn right" to="." method="_on_turn_right_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Direction/turn right" to="." method="_on_turn_right_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Direction/turn left" to="." method="_on_turn_left_state_entered"]
[connection signal="state_exited" from="State/Root/Direction/turn left" to="." method="_on_turn_left_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Direction/turn left" to="." method="_on_turn_left_state_physics_processing"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="TurnLeftTimer" to="." method="_on_turn_left_timer_timeout"]
[connection signal="timeout" from="TurnRightTimer" to="." method="_on_turn_right_timer_timeout"]
